# ALLIGATOR

./: .travis.yml  CMakeLists.txt  README.md  alligator.h  main.cpp
lib/: CMakeLists.txt  alligator.h  keeper.h
src/: CMakeLists.txt  main.cpp
